staretd the single project page, adding the icon on top, and fixing the icons in the txs file, making more reactive the text parsing. Getting stuck with an error of displaying images from the base folder

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -601,6 +601,11 @@
   margin-left: 50px;
 }
 
+.topIcon{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 /* Media queries */
 @media (max-width: 1200px){
